adding métodos para poder evaluar las playas + estructura de decisión